trying fix on detail panem portfolio page hero image stretch on safari

--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -427,6 +427,7 @@
 
 	// Detailed By Panem Page
 	section#detailpanem-content {
+		align-items:flex-start;
 		h2 {
 			@media screen and (max-width:766px) {
 				line-height:3.5rem;
